--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
+  "buildCommand": "echo 'No build step required for static site'",
+  "outputDirectory": "./",
   "functions": {
     "api/generate-hooks.js": {
       "maxDuration": 30
