--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
-  "buildCommand": "echo 'No build step required for static site'",
+  "buildCommand": "",
   "outputDirectory": "./",
+  "installCommand": "echo 'No install needed'",
   "functions": {
     "api/generate-hooks.js": {
       "maxDuration": 30
@@ -10,6 +11,12 @@
     {
       "source": "/api/generate-hooks",
       "destination": "/api/generate-hooks.js"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
     }
   ]
 }
