--- a/package.json
+++ b/package.json
@@ -1,50 +1,42 @@
 {
-  "name": "hook-headlines-generator",
+  "name": "hook-headlines-generator-pro",
   "version": "1.0.0",
-  "description": "Professional Hook & Headlines Generator for SMB owners, coaches, trainers, and course creators",
+  "description": "Professional Hook & Headlines Generator with User Authentication and Freemium Model",
   "main": "index.html",
   "scripts": {
-    "start": "npx serve . -p 3000",
-    "dev": "npx serve . -p 3000 --cors",
-    "build": "echo 'No build step required for static site'",
+    "dev": "vercel dev",
+    "build": "echo 'Static site - no build needed'",
+    "start": "python -m http.server 3000 || python3 -m http.server 3000 || npx serve .",
     "deploy": "vercel --prod",
-    "test": "echo 'Tests not implemented yet'",
-    "lint": "echo 'Linting not configured yet'"
+    "test": "echo 'No tests configured yet'"
   },
   "keywords": [
     "hooks",
-    "headlines",
+    "headlines", 
     "copywriting",
-    "ai",
-    "gpt",
-    "content-creation",
     "marketing",
-    "smb",
-    "coaches",
-    "course-creators"
+    "saas",
+    "freemium",
+    "gpt",
+    "ai"
   ],
-  "author": "Hook & Headlines Generator Team",
+  "author": "Your Name",
   "license": "MIT",
+  "dependencies": {
+    "tailwindcss": "^3.3.0"
+  },
   "devDependencies": {
-    "serve": "^14.2.1"
+    "@vercel/node": "^3.0.0",
+    "vercel": "^32.0.0"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/yourusername/hook-headlines-generator.git"
-  },
-  "bugs": {
-    "url": "https://github.com/yourusername/hook-headlines-generator/issues"
-  },
-  "homepage": "https://yourdomain.com",
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ],
-  "dependencies": {},
-  "optionalDependencies": {},
-  "peerDependencies": {}
+  "vercel": {
+    "functions": {
+      "api/generate-hooks.js": {
+        "maxDuration": 30
+      }
+    }
+  }
 }
